2007-09-21  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf.h
		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_action.h
		* gameswf/gameswf_as_classes/as_mcloader.cpp
		* gameswf/gameswf_as_classes/as_netstream.cpp
		* gameswf/gameswf_as_classes/as_xmlsocket.cpp
		* gameswf/gameswf_environment.cpp
		* gameswf/gameswf_function.cpp
		* gameswf/gameswf_function.h
		* gameswf/gameswf_impl.cpp
		* gameswf/gameswf_object.cpp
		* gameswf/gameswf_test_ogl.cpp
		* gameswf/gameswf_timers.cpp
		Pointer to as_environment is removed from struct as_as_function(),
		as_as_function should not be binded with the execution environment constantly.
		Flash places user-defined classes into _global and they can be called for
		different environments. For the same reason struct action_buffer() instead of
		references to dict & opcodes buffers hould contain data:
		action_buffer* ==> action_buffer,
		array<const char*> m_dictionary ==>array<tu_string> m_dictionary

2007-09-21  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_as_classes/as_broadcaster.*
		applied weak_ptr, listener maybe is deleted

2007-09-18  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_environment.cpp: target maybe NULL

2007-09-18  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_movie_def.cpp
		* gameswf/gameswf_movie_def.h
		* gameswf/gameswf_shape.cpp
		* gameswf/gameswf_sprite_def.cpp
		* gameswf/gameswf_test_ogl.cpp
		Fixed bug concerned with nonexpendable calls of create_movie()
		(thanks Francois Guibert for bug report)
		removed useless show_logo() stuff (it is better to use progress bar),
		USE_NEW_TESSELATOR is switched off (there are some bugs)

2007-09-16  Vitaly Alexeev <tishka92@yahoo.com>

		* base/grid_index.h
		* gameswf/gameswf_shape.cpp
		Fixed memory leaks, USE_NEW_TESSELATOR is switched on
		
2007-09-13  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_value.cpp
		the result of env->get_target() can be NULL
		