@@ -223,7 +223,7 @@ namespace gameswf
 
 		virtual void collect_garbage();
 		virtual void clear_refs(as_object_interface* this_ptr);
-
+		virtual void dump();
 	};
 }
 
